Fix some remaining issues and get exporting of basic models working